# pure-modal

./: LICENSE  default.nix  pure-modal.cabal
src/Pure/: Modal.hs
