name:                pure-modal
version:             0.8.0.0
homepage:            purehs.org/doc/pure-modal
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-modal.git

library
  exposed-modules:
      Pure.Modal

  build-depends:
      base
    , pure
    , pure-cond
    , pure-css
    , pure-prop
    , pure-portal
    , pure-theme
    , pure-lifted

  hs-source-dirs:      src
  default-language:    Haskell2010
